--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
+:root {
+  --color-shadow1: rgb(16 22 26 / 10%);
+  --color-shadow2: rgb(16 22 26 / 20%);
+  --color-background: #efefef;
+  --color-background-fixtures: #cccccc;
+  --timeline-color: #4aba31e3;
+}
+
 body {
+  background: radial-gradient(
+      var(--color-background-fixtures) 3px,
+      transparent 4px
+    ),
+    radial-gradient(var(--color-background-fixtures) 3px, transparent 4px),
+    linear-gradient(var(--color-background) 4px, transparent 0),
+    linear-gradient(
+      45deg,
+      transparent 74px,
+      transparent 75px,
+      var(--color-background-fixtures) 75px,
+      var(--color-background-fixtures) 76px,
+      transparent 77px,
+      transparent 109px
+    ),
+    linear-gradient(
+      -45deg,
+      transparent 75px,
+      transparent 76px,
+      var(--color-background-fixtures) 76px,
+      var(--color-background-fixtures) 77px,
+      transparent 78px,
+      transparent 109px
+    ),
+    var(--color-background);
+  background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
+  background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
