--- a/src/components/pages/CharacterPage/CharacterPage.css
+++ b/src/components/pages/CharacterPage/CharacterPage.css
@@ -31,3 +31,27 @@
 .CharacterPage__title {
   font-weight: normal;
 }
+
+.CharacterPage__vodGrid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 100%;
+  grid-gap: 2rem;
+}
+
+.CharacterPage__vod {
+  box-sizing: border-box;
+}
+
+.CharacterPage__vod > iframe {
+  min-height: 300px;
+}
+
+@media (max-width: 600px) {
+  .CharacterPage__vodGrid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .CharacterPage__vod > iframe {
+    min-height: 200px;
+  }
+}
