--- a/src/components/molecules/EventCard/EventCard.css
+++ b/src/components/molecules/EventCard/EventCard.css
@@ -16,3 +16,11 @@
   color: #454545;
   font-size: 0.825rem;
 }
+
+.EventCard__content img {
+  max-width: 400px;
+  max-height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
